CIRC-2661: Simplify patron notice format preference resolution